{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "787e6cc2-e27f-4d85-adcc-5e420af23a59",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "458b4ef5-b33b-4386-97cf-bccff19a3cba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jumping",
                    "type": "Button",
                    "id": "a1ff0a6a-67c4-4c24-aa4c-910df6d95985",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Left and Right",
                    "id": "1f7a64e7-6576-4b75-8c6d-56903b0268e4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "b97bc447-f39f-4f09-98cc-16fab0b8b98e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5d67578e-d121-41c0-bf6e-3f7317b8f7fb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f67d66c0-d9fd-4c89-a936-6456830647f4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jumping",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}